--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -19,3 +19,6 @@ beautifulsoup4==4.12.0
 streamlit-chat==0.0.2.2
 fake-useragent==1.1.3
 chardet==5.1.0
+docx2txt==0.8
+streamlit-modal==0.1.0
+pyodbc==4.0.39
